--- a/Student-AdvancedAnimation/Lab 924 DOM/index.html
+++ b/Student-AdvancedAnimation/Lab 924 DOM/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JS Pa</title>
+    <title>JS </title>
     <meta charset = "utf-8">
     <link rel="stylesheet" type="text/css" href="mystyles.css">
-    <script src="main.js"></script>
-    <script src="ball.js"></script>
-    <script src="jsvector.js"></script>
-    <script src="oribitor.js"></script>
+    <script src = "jsfile.js"></script>
   </head>
 
   <body>
-    <canvas id = "cnv"></canvas>
+    <div id = "wrapperDiv">
+    </div>
   </body>
 </html>
