--- a/Student-AdvancedAnimation/ParticleSystem/index.html
+++ b/Student-AdvancedAnimation/ParticleSystem/index.html
@@ -9,8 +9,10 @@
     <script src="oribitor.js"></script>
     <script src="snake.js"></script>
     <script src="particleClass.js"></script>
+    <script src="ParticleSystemClass.js"></script>
     <script src="main.js"></script>
-    
+
+
   </head>
 
   <body>
