--- a/Student-AdvancedAnimation/Flocking/index.html
+++ b/Student-AdvancedAnimation/Flocking/index.html
@@ -10,6 +10,8 @@
     <script src="snake.js"></script>
     <script src="particleClass.js"></script>
     <script src="ParticleSystemClass.js"></script>
+    <script src="Vehicle.js"></script>
+    <script src="flockClass.js"></script>
     <script src="main.js"></script>
 
   </head>
