--- a/Student-AdvancedAnimation/Flocking/index.html
+++ b/Student-AdvancedAnimation/Flocking/index.html
@@ -21,7 +21,7 @@
     <div class = "slider">
       <label for="Separation">Separation</label>
       <input type="range" id="sep" name="Separation"
-           min="0.0" max="2.0" step=".1"/>
+           min="0.0" max=".1" step=".01"/>
     </div>
       <div class = "slider">
 
