--- a/Student-AdvancedAnimation/Flocking/index.html
+++ b/Student-AdvancedAnimation/Flocking/index.html
@@ -27,12 +27,17 @@
 
         <label for="Cohesion">cohesion</label>
         <input type="range" id="coh" name="Cohesion"
-                  min="0.0" max="2.0" step = ".1"/>
+                  min="0.0" max=".1" step = ".01"/>
       </div>
       <div class = "slider">
         <label for="Alignment">Alignment</label>
         <input type="range" id="align" name="Alignment"
-                         min="0" max="2" step = ".1" />
+                         min="0" max=".1" step = ".01" />
     </div>
+    <div class = "slider">
+      <label for="radius">Radius</label>
+      <input type="range" id="radius" name="radius"
+                       min="0" max="100" step = "5" />
+  </div>
   </body>
 </html>
