--- a/Student-AdvancedAnimation/Flocking/index.html
+++ b/Student-AdvancedAnimation/Flocking/index.html
@@ -39,5 +39,10 @@
       <input type="range" id="radius" name="radius"
                        min="0" max="100" step = "5" />
   </div>
+  <div class = "slider">
+    <label for="maxForce">MaxForce</label>
+    <input type="range" id="maxForce" name="MaxForce"
+                     min="0" max="10" step = "1" />
+</div>
   </body>
 </html>
