--- a/Student-AdvancedAnimation/Flocking/index.html
+++ b/Student-AdvancedAnimation/Flocking/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <canvas id = "cnv" height = "700" width="1000" ></canvas>
+    <canvas id = "cnv" height = "800" width="1200" ></canvas>
     <div class = "slider">
       <label for="Separation">Separation</label>
       <input type="range" id="sep" name="Separation"
@@ -54,6 +54,11 @@
       <label for="maxSpeed">MaxSpeed</label>
       <input type="range" id="maxspeed" name="maxspeed"
                        min="0" max="10" step = "1" />
+    <div class = "slider">
+       <label for="maxForce">MaxForce</label>
+       <input type="range" id="maxForce" name="MaxForce"
+                                          min="0" max=".2" step = ".01" />
+        </div>
     </div>
   </body>
 </html>
