--- a/Student-AdvancedAnimation/EcoSystem/index.html
+++ b/Student-AdvancedAnimation/EcoSystem/index.html
@@ -17,48 +17,8 @@
   </head>
 
   <body>
-    <canvas id = "cnv" height = "800" width="1200" ></canvas>
-    <div class = "slider">
-      <label for="Separation">Separation</label>
-      <input type="range" id="sep" name="Separation"
-           min="0.0" max=".2" step=".01"/>
-    </div>
+    <canvas id = "cnv"></canvas>
 
-    <div class = "slider">
-      <label for="Separation">Separation radius</label>
-      <input type="range" id="sepRadius" name="Separation"
-           min="0.0" max="100" step="5"/>
-    </div>
-      <div class = "slider">
-
-        <label for="Cohesion">cohesion</label>
-        <input type="range" id="coh" name="Cohesion"
-                  min="0.0" max=".1" step = ".01"/>
-      </div>
-      <div class = "slider">
-        <label for="Alignment">Alignment</label>
-        <input type="range" id="align" name="Alignment"
-                         min="0" max=".1" step = ".01" />
-    </div>
-    <div class = "slider">
-      <label for="radius">Radius for cohesion and alignment</label>
-      <input type="range" id="radius" name="radius"
-                       min="100" max="300" step = "5" />
-  </div>
-  <div class = "slider">
-    <label for="maxForce">MaxForce</label>
-    <input type="range" id="maxForce" name="MaxForce"
-                     min="0" max=".2" step = ".01" />
-    </div>
-    <div class = "slider">
-      <label for="maxSpeed">MaxSpeed</label>
-      <input type="range" id="maxspeed" name="maxspeed"
-                       min="0" max="10" step = "1" />
-    <div class = "slider">
-       <label for="maxForce">MaxForce</label>
-       <input type="range" id="maxForce" name="MaxForce"
-                                          min="0" max=".2" step = ".01" />
-        </div>
     </div>
   </body>
 </html>
