--- a/Student-AdvancedAnimation/EcoSystem/index.html
+++ b/Student-AdvancedAnimation/EcoSystem/index.html
@@ -12,6 +12,7 @@
     <script src="ParticleSystemClass.js"></script>
     <script src="Vehicle.js"></script>
     <script src="flockClass.js"></script>
+    <script src="perlinNoise.js"></script>
     <script src="main.js"></script>
 
   </head>
