--- a/Student-AdvancedAnimation/EcoSystem/index.html
+++ b/Student-AdvancedAnimation/EcoSystem/index.html
@@ -11,7 +11,7 @@
     <script src="particleClass.js"></script>
     <script src="ParticleSystemClass.js"></script>
     <script src="Vehicle.js"></script>
-    <script src="flockClass.js"></script>
+    <script src="creator.js"></script>
     <script src="perlinNoise.js"></script>
     <script src="main.js"></script>
 
