--- a/Student-AdvancedAnimation/EcoSystem/index.html
+++ b/Student-AdvancedAnimation/EcoSystem/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="mystyles.css">
     <script src="ball.js"></script>
     <script src="jsvector.js"></script>
+    <script src="buddies.js"></script>
     <script src="oribitor.js"></script>
     <script src="snake.js"></script>
     <script src="particleClass.js"></script>
