--- a/Student-AdvancedAnimation/EcoSystem/index.html
+++ b/Student-AdvancedAnimation/EcoSystem/index.html
@@ -4,7 +4,7 @@
     <title>JS Pa</title>
     <meta charset = "utf-8">
     <link rel="stylesheet" type="text/css" href="mystyles.css">
-    <script src="ball.js"></script>
+    <script src="square.js"></script>
     <script src="jsvector.js"></script>
     <script src="snake.js"></script>
     <script src="buddies.js"></script>
