--- a/semester 2/Lab 111/index.html
+++ b/semester 2/Lab 111/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>JS Pa</title>
     <link rel="stylesheet" type="text/css" href="mystyles.css">
-    <script src="jspatterns.js"></script>
+    <script src="object.js"></script>
+    <script src="main.js"></script>
   </head>
 
   <body>
