--- a/semester 2/Lab 111/index.html
+++ b/semester 2/Lab 111/index.html
@@ -4,6 +4,7 @@
     <title>JS Pa</title>
     <link rel="stylesheet" type="text/css" href="mystyles.css">
     <script src="object.js"></script>
+    <script src="jsvector.js"></script>
     <script src="main.js"></script>
   </head>
 
